# swe1-app

./: .flake8  .gitignore  .travis.yml  Procfile  README.md  db.sqlite3  main.py  pyproject.toml  pytest.ini  requirements.txt
mysite/: settings.py  urls.py  views.py
polls/: tests.py  urls.py  views.py
polls/migrations/: 0001_initial.py
polls/templates/polls/: index.html
