[project]
name = "first-django-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asgiref==3.9.2",
    "black>=25.9.0",
    "coverage>=7.11.0",
    "coveralls>=4.0.1",
    "django==5.2.7",
    "flake8>=7.3.0",
    "pytest==8.4.2",
    "pytest-django==4.11.1",
    "sqlparse==0.5.3",
]
